// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli execute in create-react-app setup 1`] = `
"/**
 *
 * 	DASH4 configuration
 *  https://github.com/smollweide/dash4
 *
 */
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-dependencies
const { PluginDependencies } = require('@dash4/plugin-dependencies');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-terminal
const { PluginTerminal, jestCommands } = require('@dash4/plugin-terminal');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-code-coverage
const { PluginCodeCoverage } = require('@dash4/plugin-code-coverage');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-npm-scripts
const { PluginNpmScripts } = require('@dash4/plugin-npm-scripts');

async function getConfig() {
	return {
		port: 8080,
		tabs: [
			{
				title: 'Root',
				rows: [
					[new PluginDependencies(), new PluginTerminal({ cmd: 'npm start', autostart: true })],
					[
						new PluginTerminal({ cmd: 'npm run test', allowedCommands: jestCommands }),
						new PluginCodeCoverage(),
					],
					[
						new PluginNpmScripts({
							scripts: [{ title: 'build', cmd: 'npm run build' }, { title: 'test', cmd: 'npm run test' }],
						}),
					],
				],
			},
		],
	};
}

module.exports = getConfig;
"
`;

exports[`cli execute in lerna repo 1`] = `
"/**
 *
 * 	DASH4 configuration
 *  https://github.com/smollweide/dash4
 *
 */
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-dependencies
const { PluginDependencies } = require('@dash4/plugin-dependencies');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-readme
const { PluginReadme } = require('@dash4/plugin-readme');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-code-coverage
const { PluginCodeCoverage } = require('@dash4/plugin-code-coverage');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-npm-scripts
const { PluginNpmScripts } = require('@dash4/plugin-npm-scripts');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-terminal
const { PluginTerminal, jestCommands } = require('@dash4/plugin-terminal');

async function getConfig() {
	return {
		port: 8080,
		tabs: [
			{
				title: 'Root',
				rows: [
					[
						new PluginDependencies({
							lerna: 'lerna.json',
							installProcess: { title: 'run bootstrap', cmd: 'npm run bootstrap', cwd: '/' },
						}),
						new PluginReadme({ file: 'README.md' }),
					],
					[
						new PluginCodeCoverage(),
						new PluginNpmScripts({
							scripts: [
								{ title: 'bootstrap', cmd: 'npm run bootstrap' },
								{ title: 'build', cmd: 'npm run build' },
								{ title: 'test', cmd: 'npm run test' },
								{ title: 'lint', cmd: 'npm run lint' },
							],
						}),
					],
				],
			},
			{
				title: 'all-scripts',
				rows: [
					[
						new PluginTerminal({ cmd: 'npm start', cwd: 'packages/all-scripts', autostart: true }),
						new PluginTerminal({ cmd: 'npm run storybook', cwd: 'packages/all-scripts' }),
					],
					[
						new PluginReadme({ file: 'packages/all-scripts/README.md' }),
						new PluginTerminal({ cmd: 'npm run watch-test', cwd: 'packages/all-scripts' }),
					],
					[
						new PluginCodeCoverage({ cwd: 'packages/all-scripts' }),
						new PluginNpmScripts({
							scripts: [
								{ title: 'bootstrap', cmd: 'npm run bootstrap', cwd: 'packages/all-scripts' },
								{ title: 'build', cmd: 'npm run build', cwd: 'packages/all-scripts' },
								{ title: 'watch', cmd: 'npm run watch', cwd: 'packages/all-scripts' },
								{ title: 'test', cmd: 'npm run test', cwd: 'packages/all-scripts' },
								{ title: 'lint', cmd: 'npm run lint', cwd: 'packages/all-scripts' },
								{ title: 'clean', cmd: 'npm run clean', cwd: 'packages/all-scripts' },
								{ title: 'flow', cmd: 'npm run flow', cwd: 'packages/all-scripts' },
								{ title: 'compile', cmd: 'npm run compile', cwd: 'packages/all-scripts' },
								{ title: 'format', cmd: 'npm run format', cwd: 'packages/all-scripts' },
								{ title: 'prettier', cmd: 'npm run prettier', cwd: 'packages/all-scripts' },
								{ title: 'coverage', cmd: 'npm run coverage', cwd: 'packages/all-scripts' },
								{ title: 'prepare', cmd: 'npm run prepare', cwd: 'packages/all-scripts' },
								{ title: 'validate', cmd: 'npm run validate', cwd: 'packages/all-scripts' },
								{ title: 'deploy', cmd: 'npm run deploy', cwd: 'packages/all-scripts' },
								{ title: 'docs', cmd: 'npm run docs', cwd: 'packages/all-scripts' },
								{
									title: 'build-storybook',
									cmd: 'npm run build-storybook',
									cwd: 'packages/all-scripts',
								},
							],
						}),
					],
				],
			},
			{
				title: 'readme',
				rows: [[new PluginReadme({ file: 'packages/readme/README.md' })]],
			},
			{
				title: 'readme-low',
				rows: [[new PluginReadme({ file: 'packages/readme-low/README.md' })]],
			},
			{
				title: 'script-start',
				rows: [[new PluginTerminal({ cmd: 'npm start', cwd: 'packages/script-start', autostart: true })]],
			},
			{
				title: 'script-storybook',
				rows: [[new PluginTerminal({ cmd: 'npm run storybook', cwd: 'packages/script-storybook' })]],
			},
			{
				title: 'script-test',
				rows: [
					[
						new PluginCodeCoverage({ cwd: 'packages/script-test' }),
						new PluginNpmScripts({
							scripts: [{ title: 'test', cmd: 'npm run test', cwd: 'packages/script-test' }],
						}),
					],
				],
			},
			{
				title: 'script-watch-test',
				rows: [
					[
						new PluginTerminal({ cmd: 'npm run watch-test', cwd: 'packages/script-watch-test' }),
						new PluginCodeCoverage({ cwd: 'packages/script-watch-test' }),
					],
				],
			},
			{
				title: 'script-watch-test-jest',
				rows: [
					[
						new PluginTerminal({
							cmd: 'npm run watch-test',
							cwd: 'packages/script-watch-test-jest',
							allowedCommands: jestCommands,
						}),
						new PluginCodeCoverage({ cwd: 'packages/script-watch-test-jest' }),
					],
				],
			},
		],
	};
}

module.exports = getConfig;
"
`;

exports[`cli execute in yarn workspaces repo 1`] = `
"/**
 *
 * 	DASH4 configuration
 *  https://github.com/smollweide/dash4
 *
 */
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-dependencies
const { PluginDependencies } = require('@dash4/plugin-dependencies');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-readme
const { PluginReadme } = require('@dash4/plugin-readme');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-code-coverage
const { PluginCodeCoverage } = require('@dash4/plugin-code-coverage');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-npm-scripts
const { PluginNpmScripts } = require('@dash4/plugin-npm-scripts');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-terminal
const { PluginTerminal, jestCommands } = require('@dash4/plugin-terminal');

async function getConfig() {
	return {
		port: 8080,
		tabs: [
			{
				title: 'Root',
				rows: [
					[
						new PluginDependencies({
							lerna: 'lerna.json',
							installProcess: { title: 'run bootstrap', cmd: 'npm run bootstrap', cwd: '/' },
						}),
						new PluginReadme({ file: 'README.md' }),
					],
					[
						new PluginCodeCoverage(),
						new PluginNpmScripts({
							scripts: [
								{ title: 'bootstrap', cmd: 'npm run bootstrap' },
								{ title: 'build', cmd: 'npm run build' },
								{ title: 'test', cmd: 'npm run test' },
								{ title: 'lint', cmd: 'npm run lint' },
							],
						}),
					],
				],
			},
			{
				title: 'all-scripts',
				rows: [
					[
						new PluginTerminal({ cmd: 'npm start', cwd: 'packages/all-scripts', autostart: true }),
						new PluginTerminal({ cmd: 'npm run storybook', cwd: 'packages/all-scripts' }),
					],
					[
						new PluginReadme({ file: 'packages/all-scripts/README.md' }),
						new PluginTerminal({ cmd: 'npm run watch-test', cwd: 'packages/all-scripts' }),
					],
					[
						new PluginCodeCoverage({ cwd: 'packages/all-scripts' }),
						new PluginNpmScripts({
							scripts: [
								{ title: 'bootstrap', cmd: 'npm run bootstrap', cwd: 'packages/all-scripts' },
								{ title: 'build', cmd: 'npm run build', cwd: 'packages/all-scripts' },
								{ title: 'watch', cmd: 'npm run watch', cwd: 'packages/all-scripts' },
								{ title: 'test', cmd: 'npm run test', cwd: 'packages/all-scripts' },
								{ title: 'lint', cmd: 'npm run lint', cwd: 'packages/all-scripts' },
								{ title: 'clean', cmd: 'npm run clean', cwd: 'packages/all-scripts' },
								{ title: 'flow', cmd: 'npm run flow', cwd: 'packages/all-scripts' },
								{ title: 'compile', cmd: 'npm run compile', cwd: 'packages/all-scripts' },
								{ title: 'format', cmd: 'npm run format', cwd: 'packages/all-scripts' },
								{ title: 'prettier', cmd: 'npm run prettier', cwd: 'packages/all-scripts' },
								{ title: 'coverage', cmd: 'npm run coverage', cwd: 'packages/all-scripts' },
								{ title: 'prepare', cmd: 'npm run prepare', cwd: 'packages/all-scripts' },
								{ title: 'validate', cmd: 'npm run validate', cwd: 'packages/all-scripts' },
								{ title: 'deploy', cmd: 'npm run deploy', cwd: 'packages/all-scripts' },
								{ title: 'docs', cmd: 'npm run docs', cwd: 'packages/all-scripts' },
								{
									title: 'build-storybook',
									cmd: 'npm run build-storybook',
									cwd: 'packages/all-scripts',
								},
							],
						}),
					],
				],
			},
			{
				title: 'readme',
				rows: [[new PluginReadme({ file: 'packages/readme/README.md' })]],
			},
			{
				title: 'readme-low',
				rows: [[new PluginReadme({ file: 'packages/readme-low/README.md' })]],
			},
			{
				title: 'script-start',
				rows: [[new PluginTerminal({ cmd: 'npm start', cwd: 'packages/script-start', autostart: true })]],
			},
			{
				title: 'script-storybook',
				rows: [[new PluginTerminal({ cmd: 'npm run storybook', cwd: 'packages/script-storybook' })]],
			},
			{
				title: 'script-test',
				rows: [
					[
						new PluginCodeCoverage({ cwd: 'packages/script-test' }),
						new PluginNpmScripts({
							scripts: [{ title: 'test', cmd: 'npm run test', cwd: 'packages/script-test' }],
						}),
					],
				],
			},
			{
				title: 'script-watch-test',
				rows: [
					[
						new PluginTerminal({ cmd: 'npm run watch-test', cwd: 'packages/script-watch-test' }),
						new PluginCodeCoverage({ cwd: 'packages/script-watch-test' }),
					],
				],
			},
			{
				title: 'script-watch-test-jest',
				rows: [
					[
						new PluginTerminal({
							cmd: 'npm run watch-test',
							cwd: 'packages/script-watch-test-jest',
							allowedCommands: jestCommands,
						}),
						new PluginCodeCoverage({ cwd: 'packages/script-watch-test-jest' }),
					],
				],
			},
		],
	};
}

module.exports = getConfig;
"
`;

exports[`cli execute with "README.md" file 1`] = `
"/**
 *
 * 	DASH4 configuration
 *  https://github.com/smollweide/dash4
 *
 */
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-dependencies
const { PluginDependencies } = require('@dash4/plugin-dependencies');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-readme
const { PluginReadme } = require('@dash4/plugin-readme');

async function getConfig() {
	return {
		port: 8080,
		tabs: [
			{
				title: 'Root',
				rows: [[new PluginDependencies(), new PluginReadme({ file: 'README.md' })]],
			},
		],
	};
}

module.exports = getConfig;
"
`;

exports[`cli execute with all possible scripts 1`] = `
"/**
 *
 * 	DASH4 configuration
 *  https://github.com/smollweide/dash4
 *
 */
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-dependencies
const { PluginDependencies } = require('@dash4/plugin-dependencies');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-terminal
const { PluginTerminal, jestCommands } = require('@dash4/plugin-terminal');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-readme
const { PluginReadme } = require('@dash4/plugin-readme');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-code-coverage
const { PluginCodeCoverage } = require('@dash4/plugin-code-coverage');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-npm-scripts
const { PluginNpmScripts } = require('@dash4/plugin-npm-scripts');

async function getConfig() {
	return {
		port: 8080,
		tabs: [
			{
				title: 'Root',
				rows: [
					[new PluginDependencies(), new PluginTerminal({ cmd: 'npm start', autostart: true })],
					[new PluginTerminal({ cmd: 'npm run storybook' }), new PluginReadme({ file: 'README.md' })],
					[new PluginTerminal({ cmd: 'npm run watch-test' }), new PluginCodeCoverage()],
					[
						new PluginNpmScripts({
							scripts: [
								{ title: 'bootstrap', cmd: 'npm run bootstrap' },
								{ title: 'build', cmd: 'npm run build' },
								{ title: 'watch', cmd: 'npm run watch' },
								{ title: 'test', cmd: 'npm run test' },
								{ title: 'lint', cmd: 'npm run lint' },
								{ title: 'clean', cmd: 'npm run clean' },
								{ title: 'flow', cmd: 'npm run flow' },
								{ title: 'compile', cmd: 'npm run compile' },
								{ title: 'format', cmd: 'npm run format' },
								{ title: 'prettier', cmd: 'npm run prettier' },
								{ title: 'coverage', cmd: 'npm run coverage' },
								{ title: 'prepare', cmd: 'npm run prepare' },
								{ title: 'validate', cmd: 'npm run validate' },
								{ title: 'deploy', cmd: 'npm run deploy' },
								{ title: 'docs', cmd: 'npm run docs' },
								{ title: 'build-storybook', cmd: 'npm run build-storybook' },
							],
						}),
					],
				],
			},
		],
	};
}

module.exports = getConfig;
"
`;

exports[`cli execute with script "start" 1`] = `
"/**
 *
 * 	DASH4 configuration
 *  https://github.com/smollweide/dash4
 *
 */
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-dependencies
const { PluginDependencies } = require('@dash4/plugin-dependencies');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-terminal
const { PluginTerminal, jestCommands } = require('@dash4/plugin-terminal');

async function getConfig() {
	return {
		port: 8080,
		tabs: [
			{
				title: 'Root',
				rows: [[new PluginDependencies(), new PluginTerminal({ cmd: 'npm start', autostart: true })]],
			},
		],
	};
}

module.exports = getConfig;
"
`;

exports[`cli execute with script "storybook" 1`] = `
"/**
 *
 * 	DASH4 configuration
 *  https://github.com/smollweide/dash4
 *
 */
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-dependencies
const { PluginDependencies } = require('@dash4/plugin-dependencies');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-terminal
const { PluginTerminal, jestCommands } = require('@dash4/plugin-terminal');

async function getConfig() {
	return {
		port: 8080,
		tabs: [
			{
				title: 'Root',
				rows: [[new PluginDependencies(), new PluginTerminal({ cmd: 'npm run storybook' })]],
			},
		],
	};
}

module.exports = getConfig;
"
`;

exports[`cli execute with script "test" 1`] = `
"/**
 *
 * 	DASH4 configuration
 *  https://github.com/smollweide/dash4
 *
 */
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-dependencies
const { PluginDependencies } = require('@dash4/plugin-dependencies');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-code-coverage
const { PluginCodeCoverage } = require('@dash4/plugin-code-coverage');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-npm-scripts
const { PluginNpmScripts } = require('@dash4/plugin-npm-scripts');

async function getConfig() {
	return {
		port: 8080,
		tabs: [
			{
				title: 'Root',
				rows: [
					[new PluginDependencies(), new PluginCodeCoverage()],
					[new PluginNpmScripts({ scripts: [{ title: 'test', cmd: 'npm run test' }] })],
				],
			},
		],
	};
}

module.exports = getConfig;
"
`;

exports[`cli execute with script "watch-test" 1`] = `
"/**
 *
 * 	DASH4 configuration
 *  https://github.com/smollweide/dash4
 *
 */
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-dependencies
const { PluginDependencies } = require('@dash4/plugin-dependencies');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-terminal
const { PluginTerminal, jestCommands } = require('@dash4/plugin-terminal');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-code-coverage
const { PluginCodeCoverage } = require('@dash4/plugin-code-coverage');

async function getConfig() {
	return {
		port: 8080,
		tabs: [
			{
				title: 'Root',
				rows: [
					[new PluginDependencies(), new PluginTerminal({ cmd: 'npm run watch-test' })],
					[new PluginCodeCoverage()],
				],
			},
		],
	};
}

module.exports = getConfig;
"
`;

exports[`cli execute with script "watch-test-jest" 1`] = `
"/**
 *
 * 	DASH4 configuration
 *  https://github.com/smollweide/dash4
 *
 */
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-dependencies
const { PluginDependencies } = require('@dash4/plugin-dependencies');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-terminal
const { PluginTerminal, jestCommands } = require('@dash4/plugin-terminal');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-code-coverage
const { PluginCodeCoverage } = require('@dash4/plugin-code-coverage');

async function getConfig() {
	return {
		port: 8080,
		tabs: [
			{
				title: 'Root',
				rows: [
					[
						new PluginDependencies(),
						new PluginTerminal({ cmd: 'npm run watch-test', allowedCommands: jestCommands }),
					],
					[new PluginCodeCoverage()],
				],
			},
		],
	};
}

module.exports = getConfig;
"
`;
